[gd_scene load_steps=5 format=3 uid="uid://b7jo65em7pob8"]

[ext_resource type="Texture2D" uid="uid://i8txw621c4oi" path="res://test2.png" id="1_0ln56"]
[ext_resource type="Script" path="res://current.gd" id="1_h0vjb"]
[ext_resource type="Texture2D" uid="uid://bw7y6vnjpq8hx" path="res://cloudynight.png" id="2_idooq"]
[ext_resource type="Theme" uid="uid://baepfpkf4yyts" path="res://main.tres" id="3_tmtb1"]

[node name="Current" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0vjb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -639.0
offset_top = -860.0
offset_right = 721.0
offset_bottom = 913.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0ln56")
expand_mode = 1
stretch_mode = 6

[node name="WeatherIconDisplay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.0
offset_top = 40.0002
offset_right = 92.0
offset_bottom = 224.0
grow_horizontal = 2
texture = ExtResource("2_idooq")
expand_mode = 1

[node name="CurrentTemp" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -188.0
offset_right = 41.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "..."
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="DayDisplay" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 223.0
offset_right = 112.0
grow_vertical = 2

[node name="0" type="Label" parent="DayDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading
"
horizontal_alignment = 1

[node name="1" type="Label" parent="DayDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading"
horizontal_alignment = 1

[node name="2" type="Label" parent="DayDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading"
horizontal_alignment = 1

[node name="3" type="Label" parent="DayDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading"
horizontal_alignment = 1

[node name="4" type="Label" parent="DayDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading"
horizontal_alignment = 1

[node name="5" type="Label" parent="DayDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading"
horizontal_alignment = 1

[node name="6" type="Label" parent="DayDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading"
horizontal_alignment = 1

[node name="TempDisplay" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -143.0
offset_top = 223.0
grow_horizontal = 0
grow_vertical = 2

[node name="0" type="Label" parent="TempDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading
"
horizontal_alignment = 1

[node name="1" type="Label" parent="TempDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading
"
horizontal_alignment = 1

[node name="2" type="Label" parent="TempDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading
"
horizontal_alignment = 1

[node name="3" type="Label" parent="TempDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading
"
horizontal_alignment = 1

[node name="4" type="Label" parent="TempDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading
"
horizontal_alignment = 1

[node name="5" type="Label" parent="TempDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading
"
horizontal_alignment = 1

[node name="6" type="Label" parent="TempDisplay"]
layout_mode = 2
theme = ExtResource("3_tmtb1")
text = "Loading
"
horizontal_alignment = 1

[node name="CityName" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.0916667
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Burnaby"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="UpdateIn" type="Label" parent="."]
layout_mode = 0
offset_top = 448.0
offset_right = 176.0
offset_bottom = 471.0
text = "Update in null seconds"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
